[metadata]
name = labpy
version = 0.1.1.dev2
description = Collection of modules for controlling experimental setups.
keywords = experimental, physics, instrument, device, control, automation, data, acquisition, 
license = MIT
author = Franciszek Juras
url = https://github.com/franciszekjuras/labpy

[options]
install_requires =
    numpy
    scipy
    statsmodels

python_requires = >=3.9

[options.extras_require]
devices = pyvisa; pydaqmx>=1.4.6