[metadata]
name = labpython
version = 0.1.3
description = Collection of modules for controlling experimental setups.
keywords = experimental, physics, instrument, device, control, automation, data, acquisition, 
license = MIT
author = Franciszek Juras
author_email = franciszekjuras@gmail.com
url = https://github.com/franciszekjuras/labpy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy
    scipy
    jsbeautifier
    pyvisa
    pydaqmx>=1.4.6

python_requires = >=3.9

[options.extras_require]
full = statsmodels